# pagi-core

./: .gitignore  Cargo.toml  PHASE3_IMPLEMENTATION.md  README.md  build-musl.sh  docker-compose.yml
common/pagi-common/: Cargo.toml
common/pagi-common/src/: events.rs  lib.rs  swarm.rs  types.rs
common/pagi-common/tests/: events_test.rs
common/pagi-http/: Cargo.toml
common/pagi-http/src/: config.rs  errors.rs  lib.rs  tracing.rs
docker/: Dockerfile.service
docs/: ETERNAL_DEPLOYMENT.md  PLAYBOOK_EXAMPLES.md  RELAY_NODES.md
plugins/pagi-activitypub-plugin/: Cargo.toml
plugins/pagi-activitypub-plugin/src/: main.rs
plugins/pagi-did-plugin/: Cargo.toml
plugins/pagi-did-plugin/src/: main.rs
plugins/pagi-didcomm-plugin/: Cargo.toml
plugins/pagi-didcomm-plugin/src/: main.rs
plugins/pagi-filecoin-plugin/: Cargo.toml
plugins/pagi-filecoin-plugin/src/: main.rs
plugins/pagi-hive-sync-plugin/: Cargo.toml
plugins/pagi-hive-sync-plugin/src/: main.rs
plugins/pagi-ipfs-plugin/: Cargo.toml
plugins/pagi-ipfs-plugin/src/: main.rs
plugins/pagi-monitoring-plugin/: Cargo.toml
plugins/pagi-monitoring-plugin/src/: main.rs
plugins/pagi-ocm-orchestration-plugin/: Cargo.toml
plugins/pagi-ocm-orchestration-plugin/src/: main.rs
plugins/pagi-swarm-sync-plugin/: Cargo.toml
plugins/pagi-swarm-sync-plugin/src/: main.rs
plugins/pagi-updater-plugin/: Cargo.toml
plugins/pagi-updater-plugin/src/: main.rs
plugins/pagi-vc-plugin/: Cargo.toml
plugins/pagi-vc-plugin/src/: main.rs
scripts/: README.md  phase6-remediate.sh  phase6-smoke-test-json.sh  phase6-smoke-test.sh  smoke-test-json.sh  smoke-test-remediate.sh  smoke-test.sh
services/pagi-context-builder/: Cargo.toml
services/pagi-context-builder/src/: main.rs
services/pagi-context-engine/: Cargo.toml
services/pagi-context-engine/src/: main.rs
services/pagi-emotion-state-manager/: Cargo.toml
services/pagi-emotion-state-manager/src/: main.rs
services/pagi-event-router/: Cargo.toml
services/pagi-event-router/src/: main.rs
services/pagi-executive-engine/: Cargo.toml
services/pagi-executive-engine/src/: main.rs
services/pagi-external-gateway/: Cargo.toml
services/pagi-external-gateway/src/: auto_discover.rs  main.rs  redis_registry.rs  shared_lib.rs  wasm_component_plugin.rs  wasm_plugin.rs
services/pagi-identity-service/: Cargo.toml
services/pagi-identity-service/src/: main.rs
services/pagi-inference-gateway/: Cargo.toml
services/pagi-inference-gateway/src/: main.rs
services/pagi-sensor-actuator/: Cargo.toml
services/pagi-sensor-actuator/src/: main.rs
services/pagi-working-memory/: Cargo.toml
services/pagi-working-memory/src/: main.rs
wit/: pagi-plugin.wit
