[workspace]
resolver = "2"

members = [
  "common/pagi-common",
  "common/pagi-http",

  "services/pagi-identity-service",
  "services/pagi-event-router",
  "services/pagi-working-memory",
  "services/pagi-context-builder",
  "services/pagi-inference-gateway",
  "services/pagi-executive-engine",
  "services/pagi-emotion-state-manager",
  "services/pagi-sensor-actuator",
  "services/pagi-external-gateway",

  "plugins/pagi-monitoring-plugin",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
