[package]
name = "pagi-didcomm-plugin"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tower-http.workspace = true
uuid.workspace = true
ed25519-dalek.workspace = true
multibase.workspace = true

pagi-common = { path = "../../common/pagi-common" }
pagi-http = { path = "../../common/pagi-http" }
