[package]
name = "pagi-filecoin-plugin"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

# Disable default features to avoid requiring system CUDA/OpenCL libraries.
filecoin-proofs-api = { version = "15.0", default-features = false }

pagi-common = { path = "../../common/pagi-common" }
pagi-http = { path = "../../common/pagi-http" }
