[package]
name = "pagi-ipfs-plugin"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
base64.workspace = true

# Optional embedded IPFS node (libp2p). Disabled by default because `rust-ipfs` 0.4
# currently conflicts with newer `libp2p` versions in many workspaces.
rust-ipfs = { version = "0.4", optional = true }

pagi-common = { path = "../../common/pagi-common" }
pagi-http = { path = "../../common/pagi-http" }

[features]
default = ["ipfs-http"]
ipfs-http = []
embedded-ipfs = ["dep:rust-ipfs"]
