[package]
name = "pagi-monitoring-plugin"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
eventsource-stream.workspace = true
futures-util.workspace = true
