[package]
name = "pagi-event-router"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
rdkafka.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true

pagi-common = { path = "../../common/pagi-common" }
pagi-http = { path = "../../common/pagi-http" }
