[package]
name = "pagi-external-gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
once_cell = "1.19"

pagi-common = { path = "../../common/pagi-common" }
pagi-http = { path = "../../common/pagi-http" }
