[package]
name = "pagi-external-gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
redis.workspace = true
notify.workspace = true
toml.workspace = true
libloading.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

[features]
# Phase 5: optional hardening features
seccomp = ["dep:libscmp", "dep:libc"]

[target.'cfg(target_os = "linux")'.dependencies]
libscmp = { version = "0.2", optional = true }
libc = { version = "0.2", optional = true }

pagi-common = { path = "../../common/pagi-common" }
pagi-http = { path = "../../common/pagi-http" }
